# vcc-auto-translate

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  bun.lockb  crowdin.yml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  tsconfig.json  vcc-auto-translate.ts  vcc_notwindows.go  vcc_windows.go
.github/: FUNDING.yml
.github/workflows/: release.yml
cmd/installer/: .gitignore  main.go
cmd/installer/utils/: file.go  i18n.go  vcc_notwindows.go  vcc_windows.go
crates/installer/: .gitignore  Cargo.toml
crates/installer/src/: main.rs
data/: texts.ts
docs/: index.html  injector.html  injector.min.js
installer-src/: Cargo.toml
installer-src/src/: main.rs  utils.rs  vcc.rs
localization/: algolia.en.json  algolia.zh_CN.json  algolia.zh_TW.json  en.json  zh-CN.json  zh-TW.json  zh-hans.json  zh_CN.json  zh_TW.json
scripts/: build-patch-loader.ts  build-script-loader.ts  coverage-checker.ts  localization_hashs.ts  missing-translation-generator.ts  version.ts
src/: env.ts  helpers.ts  index.ts  injector.ts  language.ts  localization.ts  patch-loader.ts  script-loader.ts  store.ts  translate.ts  utils.ts
src/components/: loading.module.css  loading.tsx
src/components/loading/: index.tsx
src/components/setting/: index.tsx
src/patch/: algolia.ts  console_log.ts  patch.d.ts  translate.ts
src/styles/: script-loader.module.css.d.ts
types/: injector.d.ts
types/patch/: algolia.d.ts  index.d.ts  translate.d.ts
