[package]
name = "vcc-auto-translate-installer"
version = "1.6.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.81" }
regex-automata = { version = "0.4.6", default-features = false, features = ["std", "meta"] }
scopeguard = { version = "1.2.0", default-features = false }
winreg = { version = "0.52.0" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = "abort"
